2005-06-30 21:41  PeterB

	* libbalsa/imap/imap-commands.c: use more of the GString api.
	* src/address-book-config.c: make sure filename is shown for
	LibBalsaAddressBookText.
	* src/ab-main.c: show address book type in window title; implement
	File->delete.
	* libbalsa/address-book-text.c: invalidate time stamp when we
	change the address book.
	* libbalsa/address-book-ldif.c: ensure blank line before new entry.
	* src/main-window.c: make progress bar faster than a snail.
	* libbalsa/libbalsa-conf.c: use g_file_set_contents to rewrite
	config files.

2005-06-24 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* libbalsa/body.[hc]: implement libbalsa_message_body_protect_state().
	* src/Makefile.am: add 7+7 balsa-mime-widget source files.
	* src/balsa-message.[ch]: use the cleaner design from balsa-mime-widget.

2005-06-22  Pawel Salek

	* libbalsa/mailbox_imap.c: fix date searching when only upper
	limit is present.
	* libbalsa/mailbox_pop3.c: fix memory leak.
	* libbalsa/imap/imap-search.c: date::range must be signed.
	* src/filter-edit-callbacks.c: clean up filter dialog.
	* src/filter-run-{callbacks,dialog}.c: fix "run filters".
	* src/filter-run.h: add fr_apply_pressed() prototype.

2005-06-17 08:31  PeterB

	* libbalsa/address-book-vcard.c, libbalsa/address.c,
	src/Makefile.am, src/ab-main.c, src/address-book-config.c,
	src/address-book-config.h: implement File->New and File->Properties
	in balsa-ab.

2005-06-16  Pawel Salek

	* libbalsa/imap/auth-gssapi.c: 6th parameter to gss_{un,}wrap is int*.

2005-06-14 12:48  PeterB

	* src/sendmsg-window.c: clear BalsaSendmsg::in_reply_to.
	* src/sendmsg-window.h: omitted from yesterday's commit.

2005-06-13 23:59  PeterB

	* src/sendmsg-window.c: create in-reply-to string when we begin a
	reply, so we can save and restore it without reference to the
	original message.
	* src/: balsa-message.c, information-dialog.c: use
	GTK_WRAP_WORD_CHAR instead of GTK_WRAP_WORD, to allow wrapping of
	long words.